--- a/bathing.html
+++ b/bathing.html
@@ -96,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-              <a href="index.html" class="ms-3">
+              <a href="#!" class="ms-3">
                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
               </a>
             </div>
@@ -167,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -177,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="dashboard.html">NEW IN</a>
+              <a class="nav-link" href="#!">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="#!">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="#!">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">FEEDING & WEANING</a>
+              <a class="nav-link" href="#!">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="update.html">TOYS & GIFT</a>
+              <a class="nav-link" href="#!">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="checkout.html">BABY CARE</a>
+              <a class="nav-link" href="#!">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
+              <a class="nav-link" href="#!">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">BLOG</a>
+              <a class="nav-link" href="#!">BLOG</a>
             </li>
           </ul>
         </div>
@@ -230,9 +230,8 @@
                 style=" align-items: center; background-color: #ffffff; min-height: 3rem; color: white;">
                 <div class="container">
                     <div class="container position-relative">
-                        <h6 class="text-dark text-center fs-4">Home/Baby <span class="dark-black">/Bathing &
-                                Changeing</span></h6>
-                        <div style="right:0; top:-10px; " class="position-absolute">
+                        <h6 class="text-dark text-center fs-4">Home/Baby <span class="dark-black">/Bathing & Changeing</span></h6>
+                        <div style= "right:0; top:-10px; " class="position-absolute">
                             <img src="bundles/images/lit-icons/edit.png" alt="" class="img-fluid">
                         </div>
                     </div>
@@ -286,8 +285,7 @@
                                             for="form1">Search</label>
                                     </div> -->
                                     <div style="min-height: 3rem;" class="input-group mb-3">
-                                        <button class="btn product-btn btn-outline-secondary" type="button"
-                                            id="button-addon1">
+                                        <button class="btn product-btn btn-outline-secondary" type="button" id="button-addon1">
                                             <i class="fas text-dark fa-search"></i>
                                         </button>
                                         <input style="height: 100%;" type="text" class="form-control" placeholder=""
@@ -1136,7 +1134,7 @@
             </div>
         </section>
 
-        <section class="adjust">
+        <!-- <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
                     <div class="my-slider d-flex align-items-center">
@@ -1159,12 +1157,12 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
     </main>
 
-
+ 
   <!-- Footer -->
   <footer>
     <div class="text-center container px-16 text-lg-start pb-3 pt-5 text-muted">
@@ -1224,7 +1222,7 @@
             <div class="col-md-3 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
-                Product Support
+                Product
               </h6>
               <p>
                 <a href="#!" class="text-reset">Bottles Feeding</a>
