--- a/blog_details.html
+++ b/blog_details.html
@@ -31,7 +31,7 @@
         rel="stylesheet">
 </head>
 
-<body>
+<body class="body">
     <!-- Start your project here-->
     <header class=" fixd-top">
         <!-- Jumbotron -->
@@ -98,7 +98,7 @@
                     <div class="row">
                         <div
                             class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-                            <a href="index.html" class="ms-3">
+                            <a href="#!" class="ms-3">
                                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
                             </a>
                         </div>
@@ -174,7 +174,7 @@
 
         <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
             <div class="container-fluid">
-                <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
+                <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
                 <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse"
                     data-mdb-target="#navbarExample01" aria-controls="navbarExample01" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -185,31 +185,31 @@
                 <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
                     <ul class="navbar-nav mx-auto mb-3 mt-1">
                         <li class="nav-item active">
-                            <a class="nav-link" href="dashboard.html">NEW IN</a>
+                            <a class="nav-link" href="#!">NEW IN</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
+                            <a class="nav-link" href="#!">BATHING & CHANGING</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="baby.html">BABY SAFETY</a>
+                            <a class="nav-link" href="#!">BABY SAFETY</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="product.html">FEEDING & WEANING</a>
+                            <a class="nav-link" href="#!">FEEDING & WEANING</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="update.html">TOYS & GIFT</a>
+                            <a class="nav-link" href="#!">TOYS & GIFT</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="checkout.html">BABY CARE</a>
+                            <a class="nav-link" href="#!">BABY CARE</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
+                            <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
                         </li>
                         <li class="nav-item active">
-                            <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
+                            <a class="nav-link" href="#!">PARENTS ROOM</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="blog.html">BLOG</a>
+                            <a class="nav-link" href="#!">BLOG</a>
                         </li>
                     </ul>
                 </div>
@@ -358,7 +358,7 @@
             </div>
         </section>
 
-        <section class="adjust">
+        <!-- <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
                     <div class="my-slider d-flex align-items-center">
@@ -381,11 +381,10 @@
                     </div>
                 </div>
             </div>
-        </section>
+        </section> -->
 
 
     </main>
-
 
     <!-- Footer -->
     <footer>
@@ -447,7 +446,7 @@
                         <div class="col-md-3 mx-0 mb-4">
                             <!-- Links -->
                             <h6 class=" text-dark sign-h4 mb-4">
-                                Product Support
+                                Product
                             </h6>
                             <p>
                                 <a href="#!" class="text-reset">Bottles Feeding</a>
@@ -548,6 +547,12 @@
 
     <!--javaScript Libraries -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tiny-slider/2.9.2/min/tiny-slider.js"></script>
+
+    <!-- <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.2/dist/umd/popper.min.js"
+     integrity="sha384-IQsoLXl5PILFhosVNubq5LC7Qb9DXgDA9i+tQ8Zj3iwWAwPtgFTxbJ8NT4GN1R8p"
+     crossorigin="anonymous"></script> -->
+    <!-- <script src="bundles/owlcarousel/owl.carousel.min.js"></script> -->
+    <!-- <script src="bundles/js/bootstrap.js"></script> -->
 
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
         integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
