--- a/cart.html
+++ b/cart.html
@@ -220,6 +220,14 @@
     </header>
 
     <main>
+        
+        <section class="slider-container">
+            <div class="mb-5">
+                <div>
+                    <img src="bundles/images/landing/header-pics.jpg" alt="" style="height: 250px;" class="w-100">
+                </div>
+            </div>
+        </section>
         <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
@@ -228,7 +236,7 @@
                             <h5 class="my-3 fw-bold">Shopping Cart</h5>
                             <div class="row">
                                 <div class="">
-                                    <div>
+                                    <div class="pb-4">
                                         <table class="table table-hover">
                                             <thead class=" table-secondary">
                                                 <tr>
@@ -296,7 +304,7 @@
                                         </table>
                                     </div>
 
-                                    <div>
+                                    <div class="pb-4">
                                         <div class="d-flex justify-content-center">
                                             <button class="btn btn-primary rounded-0">Continue Shopping</button>
                                             <button class="btn btn-primary rounded-0 ms-3">Checkout</button>
@@ -314,7 +322,7 @@
                     </section>
 
 
-                    <div class="my-slider d-flex align-items-center">
+                    <!-- <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -331,7 +339,7 @@
                         <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
                         <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
                         <div><img src="bundles/images/landing/orange.png" alt=""></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -399,7 +407,7 @@
                         <div class="col-md-3 mx-0 mb-4">
                             <!-- Links -->
                             <h6 class=" text-dark sign-h4 mb-4">
-                                Product Support
+                                Product
                             </h6>
                             <p>
                                 <a href="#!" class="text-reset">Bottles Feeding</a>
