--- a/checkout.html
+++ b/checkout.html
@@ -449,7 +449,7 @@
                     </section>
 
 
-                    <div class="my-slider">
+                    <!-- <div class="my-slider">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -466,7 +466,7 @@
                         <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
                         <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
                         <div><img src="bundles/images/landing/orange.png" alt=""></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -542,7 +542,7 @@
                         <div class="col-md-3 mx-0 mb-4">
                             <!-- Links -->
                             <h6 class=" text-dark sign-h4 mb-4">
-                                Product Support
+                                Product
                             </h6>
                             <p>
                                 <a href="#!" class="text-reset">Bottles Feeding</a>
