--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
 
   <!-- MDB -->
-  <!-- <link rel="stylesheet" href="css/mdb.min.css" /> -->
+  <link rel="stylesheet" href="css/mdb.min.css" />
   <link rel="stylesheet" href="style.css">
   <!-- <link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'> -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -765,7 +765,7 @@
         </div>
         <div>
           <div class="container-fluid">
-            <div id="my-slider-2" class="my-slider-2">
+            <div id="my-slider-2" class="my-slider">
               <div>
                 <div class="icon-bg-1 icon-body"><img class="d-block w-100"
                     src="bundles/images/lit-icons/pacifier 1.png" alt="">
@@ -896,7 +896,7 @@
         </div>
 
 
-        <div class="container-fluid my-5">
+        <!-- <div class="container-fluid my-5">
           <div class="my-slider d-flex align-items-center">
             <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
             <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
@@ -915,7 +915,7 @@
             <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
             <div><img src="bundles/images/landing/orange.png" alt=""></div>
           </div>
-        </div>
+        </div> -->
       </div>
     </section>
 
@@ -981,7 +981,7 @@
             <div class="col-md-3 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
-                Product Support
+                Product
               </h6>
               <p>
                 <a href="#!" class="text-reset">Bottles Feeding</a>
@@ -1076,7 +1076,7 @@
   <!-- Footer -->
 
   <!-- MDB -->
-  <!-- <script type="text/javascript" src="js/mdb.min.js"></script> -->
+  <script type="text/javascript" src="js/mdb.min.js"></script>
   <!-- Custom scripts -->
   <script type="text/javascript"></script>
 
