--- a/order.html
+++ b/order.html
@@ -225,10 +225,9 @@
                 <div class="container-fluid my-5">
                     <section>
                         <div> 
-                            <h5 class="fw-bold my-3">Order History</h5>
                             <div class="row">
-                                <div class="col-9">
-
+                                <div class="col-10 mx-auto">
+                                    <h5 class="fw-bold my-3">Order History</h5>
                                     <div>
                                         <table class="table table-bordered table-hover">
                                             <thead class=" table-secondary">
@@ -265,7 +264,7 @@
                                         </table>
                                     </div>
                                 </div>
-                                <div class="col-3"></div>
+                                <!-- <div class="col-3"></div> -->
                             </div>
                             <div class="my-4">
                                 <div class="row justify-content-center">
@@ -277,7 +276,7 @@
                     </section>
 
 
-                    <div class="my-slider d-flex align-items-center">
+                    <!-- <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -294,7 +293,7 @@
                         <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
                         <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
                         <div><img src="bundles/images/landing/orange.png" alt=""></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -363,7 +362,7 @@
                         <div class="col-md-3 mx-0 mb-4">
                             <!-- Links -->
                             <h6 class=" text-dark sign-h4 mb-4">
-                                Product Support
+                                Product
                             </h6>
                             <p>
                                 <a href="#!" class="text-reset">Bottles Feeding</a>
