--- a/otp.html
+++ b/otp.html
@@ -96,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-              <a href="index.html" class="ms-3">
+              <a href="#!" class="ms-3">
                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
               </a>
             </div>
@@ -167,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -177,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="dashboard.html">NEW IN</a>
+              <a class="nav-link" href="#!">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="#!">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="#!">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">FEEDING & WEANING</a>
+              <a class="nav-link" href="#!">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="update.html">TOYS & GIFT</a>
+              <a class="nav-link" href="#!">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="checkout.html">BABY CARE</a>
+              <a class="nav-link" href="#!">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
+              <a class="nav-link" href="#!">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">BLOG</a>
+              <a class="nav-link" href="#!">BLOG</a>
             </li>
           </ul>
         </div>
@@ -249,7 +249,7 @@
 
       </div>
     </div>
-    <div class="container-fluid my-5">
+    <!-- <div class="container-fluid my-5">
       <div class="my-slider d-flex align-items-center">
         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
@@ -268,7 +268,7 @@
         <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
         <div><img src="bundles/images/landing/orange.png" alt=""></div>
       </div>
-    </div>
+    </div> -->
   </main>
 
 
@@ -331,7 +331,7 @@
             <div class="col-md-3 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
-                Product Support
+                Product
               </h6>
               <p>
                 <a href="#!" class="text-reset">Bottles Feeding</a>
