--- a/reg.html
+++ b/reg.html
@@ -96,7 +96,7 @@
         <div class="container-fluid">
           <div class="row">
             <div class="col-md-4 d-flex justify-content-center justify-content-md-start ps-lg-5 mb-3 mb-md-0">
-              <a href="index.html" class="ms-3">
+              <a href="#!" class="ms-3">
                 <img src="bundles/images/landing/gallery_logo.png" height="80" />
               </a>
             </div>
@@ -167,7 +167,7 @@
 
     <nav class="navbar navbar-expand-lg navbar-scroll bg-white shadow-0">
       <div class="container-fluid">
-        <a class="navbar-brand d-lg-none" href="reg.html">NEW IN</a>
+        <a class="navbar-brand d-lg-none" href="#">NEW IN</a>
         <button class="navbar-toggler ps-0" type="button" data-mdb-toggle="collapse" data-mdb-target="#navbarExample01"
           aria-controls="navbarExample01" aria-expanded="false" aria-label="Toggle navigation">
           <span class="d-flex justify-content-start align-items-center">
@@ -177,31 +177,31 @@
         <div class="collapse navbar-links navbar-collapse" id="navbarExample01">
           <ul class="navbar-nav mx-auto mb-3 mt-1">
             <li class="nav-item active">
-              <a class="nav-link" href="dashboard.html">NEW IN</a>
+              <a class="nav-link" href="#!">NEW IN</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="bathing.html">BATHING & CHANGING</a>
+              <a class="nav-link" href="#!">BATHING & CHANGING</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="baby.html">BABY SAFETY</a>
+              <a class="nav-link" href="#!">BABY SAFETY</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="product.html">FEEDING & WEANING</a>
+              <a class="nav-link" href="#!">FEEDING & WEANING</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="update.html">TOYS & GIFT</a>
+              <a class="nav-link" href="#!">TOYS & GIFT</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="checkout.html">BABY CARE</a>
+              <a class="nav-link" href="#!">BABY CARE</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="contact.html">OFFER SETS & BUNDLES</a>
+              <a class="nav-link" href="#!">OFFER SETS & BUNDLES</a>
             </li>
             <li class="nav-item active">
-              <a class="nav-link" href="blog_details.html">PARENTS ROOM</a>
+              <a class="nav-link" href="#!">PARENTS ROOM</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="blog.html">BLOG</a>
+              <a class="nav-link" href="#!">BLOG</a>
             </li>
           </ul>
         </div>
@@ -209,104 +209,106 @@
     </nav>
   </header>
 
-  <main>
-    <div class=" container-fluid main-body">
-      <div class="row">
-        <div class="col-md-7 ms-n5">
-          <!-- <div class="container"> -->
-          <img src="bundles/images/landing/blog-pics2.png" class="h-100 w-100" alt="">
-        </div>
-        <!-- </div> -->
-        <div class="col-md-5 ps-md-5">
-          <div>
-            <h5 class="text-center text-dark my-5"><b>REGISTER A NEW ACCOUNT</b></h5>
-            <form class="row">
-              <div class="col-md-6 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="firstName" class="form-control" />
-                  <label class="form-label" for="firstName">First Name</label>
+    <main>
+        <div class=" container-fluid main-body">
+            <div class="row">
+                <div class="col-md-7 ms-n5">
+                    <!-- <div class="container"> -->
+                    <img src="bundles/images/landing/blog-pics2.png" class="h-100 w-100" alt="">
                 </div>
-              </div>
-              <div class="col-md-6 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="lastName" class="form-control" />
-                  <label class="form-label" for="lastName">Last Name</label>
+                <!-- </div> -->
+                <div class="col-md-5 ps-md-5">
+                    <div>
+                        <h5 class="text-center text-dark my-5"><b>REGISTER A NEW ACCOUNT</b></h5>
+                        <form class="row">
+                            <div class="col-md-6 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="firstName" class="form-control" />
+                                    <label class="form-label" for="firstName">First Name</label>
+                                </div>
+                            </div>
+                            <div class="col-md-6 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="lastName" class="form-control" />
+                                    <label class="form-label" for="lastName">Last Name</label>
+                                </div>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <div class="form-outline">
+                                    <input type="email" id="email" class="form-control" />
+                                    <label class="form-label" for="email">Email</label>
+                                </div>
+                            </div>
+                            <div class="col-3 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="formControlSm" class="form-control" />
+                                    <label class="form-label" readonly for="formControlSm">(+234)</label>
+                                </div>
+                            </div>
+                            <div class="col-9 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="formControlSm" class="form-control" />
+                                    <label class="form-label" for="formControlSm">Telephone</label>
+                                </div>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <select class="form-select selecter form-select mb-3"
+                                    aria-label=".form-select-lg example">
+                                    <option selected>Select Country</option>
+                                    <option value="1">Nigeria</option>
+                                    <option value="2">Ghana</option>
+                                    <option value="3">Cameroon</option>
+                                </select>
+                            </div>
+                            <div class="col-12 mb-3">
+                              <div class="form-outline">
+                                <input type="text" id="regAddress" class="form-control" />
+                                <label class="form-label" for="regAddress">Addresss</label>
+                              </div>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="formControlSm" class="form-control" />
+                                    <label class="form-label" for="formControlSm">Password</label>
+                                </div>
+                            </div>
+                            <div class="col-12 mb-3">
+                                <div class="form-outline">
+                                    <input type="text" id="formControlSm" class="form-control" />
+                                    <label class="form-label" for="formControlSm">Confirm password</label>
+                                </div>
+                            </div>
+                            <div class="col-auto">
+                                <button type="submit" class="btn button-color me-5 mb-3">Submit</button>
+                            </div>
+                        </form>
+                    </div>
                 </div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="form-outline">
-                  <input type="email" id="email" class="form-control" />
-                  <label class="form-label" for="email">Email</label>
-                </div>
-              </div>
-              <div class="col-3 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="formControlSm" class="form-control" />
-                  <label class="form-label" readonly for="formControlSm">(+234)</label>
-                </div>
-              </div>
-              <div class="col-9 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="formControlSm" class="form-control" />
-                  <label class="form-label" for="formControlSm">Telephone</label>
-                </div>
-              </div>
-              <div class="col-12 mb-3">
-                <select class="form-select selecter form-select mb-3" aria-label=".form-select-lg example">
-                  <option selected>Select Country</option>
-                  <option value="1">Nigeria</option>
-                  <option value="2">Ghana</option>
-                  <option value="3">Cameroon</option>
-                </select>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="regAddress" class="form-control" />
-                  <label class="form-label" for="regAddress">Addresss</label>
-                </div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="formControlSm" class="form-control" />
-                  <label class="form-label" for="formControlSm">Password</label>
-                </div>
-              </div>
-              <div class="col-12 mb-3">
-                <div class="form-outline">
-                  <input type="text" id="formControlSm" class="form-control" />
-                  <label class="form-label" for="formControlSm">Confirm password</label>
-                </div>
-              </div>
-              <div class="col-auto">
-                <button type="submit" class="btn button-color me-5 mb-3">Submit</button>
-              </div>
-            </form>
-          </div>
-        </div>
 
-      </div>
-    </div>
-    <div class="container-fluid my-5">
-      <div class="my-slider d-flex align-items-center">
-        <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
-        <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
-        <div><img src="bundles/images/landing/norway.png" alt=""></div>
-        <div><img src="bundles/images/landing/avante.png" alt=""></div>
-        <div><img src="bundles/images/landing/matuska.png" alt=""></div>
-        <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
-        <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
-        <div><img src="bundles/images/landing/orange.png" alt=""></div>
-        <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
-        <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
-        <div><img src="bundles/images/landing/norway.png" alt=""></div>
-        <div><img src="bundles/images/landing/avante.png" alt=""></div>
-        <div><img src="bundles/images/landing/matuska.png" alt=""></div>
-        <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
-        <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
-        <div><img src="bundles/images/landing/orange.png" alt=""></div>
-      </div>
-    </div>
-  </main>
+            </div>
+        </div>
+        <!-- <div class="container-fluid my-5">
+            <div class="my-slider d-flex align-items-center">
+                <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
+                <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
+                <div><img src="bundles/images/landing/norway.png" alt=""></div>
+                <div><img src="bundles/images/landing/avante.png" alt=""></div>
+                <div><img src="bundles/images/landing/matuska.png" alt=""></div>
+                <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
+                <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
+                <div><img src="bundles/images/landing/orange.png" alt=""></div>
+                <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
+                <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
+                <div><img src="bundles/images/landing/norway.png" alt=""></div>
+                <div><img src="bundles/images/landing/avante.png" alt=""></div>
+                <div><img src="bundles/images/landing/matuska.png" alt=""></div>
+                <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
+                <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
+                <div><img src="bundles/images/landing/orange.png" alt=""></div>
+            </div>
+        </div> -->
+    </main>
+
 
 
   <!-- Footer -->
@@ -368,7 +370,7 @@
             <div class="col-md-3 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
-                Product Support
+                Product
               </h6>
               <p>
                 <a href="#!" class="text-reset">Bottles Feeding</a>
