--- a/update.html
+++ b/update.html
@@ -376,7 +376,7 @@
             <div class="col-md-3 mx-0 mb-4">
               <!-- Links -->
               <h6 class=" text-dark sign-h4 mb-4">
-                Product Support
+                Product
               </h6>
               <p>
                 <a href="#!" class="text-reset">Bottles Feeding</a>
