--- a/wishlist.html
+++ b/wishlist.html
@@ -220,6 +220,14 @@
     </header>
 
     <main>
+        
+        <section class="slider-container">
+            <div class="mb-5">
+                <div>
+                    <img src="bundles/images/landing/header-pics.jpg" alt="" style="height: 250px;" class="w-100">
+                </div>
+            </div>
+        </section>
         <section class="adjust">
             <div class="container px-16">
                 <div class="container-fluid my-5">
@@ -298,7 +306,7 @@
                     </section>
 
 
-                    <div class="my-slider d-flex align-items-center">
+                    <!-- <div class="my-slider d-flex align-items-center">
                         <div><img src="bundles/images/landing/HIPSTER.png" alt=""></div>
                         <div><img src="bundles/images/landing/VONDE.png" alt=""></div>
                         <div><img src="bundles/images/landing/norway.png" alt=""></div>
@@ -315,7 +323,7 @@
                         <div><img src="bundles/images/landing/tylertone.png" alt=""></div>
                         <div><img src="bundles/images/landing/neoquen.png" alt=""></div>
                         <div><img src="bundles/images/landing/orange.png" alt=""></div>
-                    </div>
+                    </div> -->
                 </div>
             </div>
         </section>
@@ -383,7 +391,7 @@
                         <div class="col-md-3 mx-0 mb-4">
                             <!-- Links -->
                             <h6 class=" text-dark sign-h4 mb-4">
-                                Product Support
+                                Product
                             </h6>
                             <p>
                                 <a href="#!" class="text-reset">Bottles Feeding</a>
